fixed bugs. 1>big images in messages were spilling out in mobile view. 2>read receit was not posisioned correcty for large messages.3>image preview caption input was sppliiling out on mobile view.

--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,9 @@ html, body, #root, .App {
   background-color: #43474b;
   color: #fff;
   border-radius: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
 .from-them {
@@ -293,11 +296,16 @@ html, body, #root, .App {
   display: none;
 }
 
-.imagePreview__image,
+.imagePreview__image{
+  object-fit: contain;
+  max-width: 200px;
+  max-height: 200px;
+}
+
 .chatMessage__image {
   object-fit: contain;
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .imagePreview__image__container {
@@ -306,6 +314,7 @@ html, body, #root, .App {
   align-items: center;
   flex-direction: row;
   margin-bottom: 5%;
+  margin-top: 10%;
 }
 
 .imagePreview__image__progress {
@@ -326,13 +335,15 @@ html, body, #root, .App {
 .imagePreview__image__input {
   max-width: 400px;
   margin: auto;
+  display: flex;
+  justify-items: center;
+  align-items: center;
   margin-bottom: 20px;
-  /* background-color: #43474b; */
 }
 
 .imagePreview__image__input input {
   height: 100%;
-  width: 100%;
+  margin: auto;
   border-radius: 10px;
   border: 1px solid #43474b;
   background-color: #43474b;
@@ -343,9 +354,11 @@ html, body, #root, .App {
 .chatMessage__image__textAndReadReceit {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .chatMessage__image__ReadReceit {
   display: flex;
   align-items: flex-end;
 }
+
